# crdtosphere

./: .gitignore  Cargo.toml  Makefile  README.md
.github/workflows/: ci.yml  embedded.yml  performance.yml  pr-checks.yml
benches/: crdt_benchmarks.rs  memory_benchmarks.rs
docs/: crdt-types.html  domains.html  examples.html  getting-started.html  hardware-atomic.md  index.html  styles.css
examples/: atomic_counter.rs  atomic_gset.rs  atomic_lww_map.rs  atomic_lww_register.rs  atomic_mv_register.rs  atomic_orset.rs  atomic_pncounter.rs  basic_counter.rs  config_management.rs  device_registry.rs
examples/automotive_ecu_network/: Cargo.toml  README.md  SIMULATION_GUIDE.md  demo_simulation.resc  interactive_simulation.resc  memory.x  parse_crdt_output.py  test_scenarios.sh  test_simulation.resc
examples/automotive_ecu_network/.cargo/: config.toml
examples/automotive_ecu_network/renode/: platform.repl  simulation.resc
examples/automotive_ecu_network/scenarios/: ecu_failure.resc  emergency_brake.resc  normal_operation.resc  sensor_fusion.resc
examples/automotive_ecu_network/src/: can_protocol.rs  ecu_types.rs  lib.rs  memory_mapped_crdt.rs  safety_manager.rs  sensor_manager.rs
examples/industrial/: production_monitoring.rs
examples/iot/: sensor_mesh.rs
examples/robotics/: swarm_coordination.rs
examples/stm32_nucleo_f767zi_demo/: Cargo.toml  README.md  debug.sh  flash.sh  memory.x  monitor.sh
examples/stm32_nucleo_f767zi_demo/.cargo/: config.toml
examples/stm32_nucleo_f767zi_demo/src/: crdt_demo.rs  led_controller.rs  main.rs
src/: lib.rs
src/automotive/: mod.rs  safety.rs  sensors.rs
src/clock/: mod.rs
src/configs/: mod.rs
src/counters/: gcounter.rs  mod.rs  pncounter.rs
src/error/: mod.rs  platform.rs  realtime.rs  safety.rs  types.rs
src/industrial/: equipment.rs  mod.rs  processes.rs
src/iot/: devices.rs  mod.rs  sensors.rs
src/maps/: lww.rs  mod.rs
src/memory/: config.rs  macros.rs  mod.rs  validation.rs
src/platform/: mod.rs
src/registers/: lww.rs  mod.rs  mv.rs
src/robotics/: mapping.rs  mod.rs  signals.rs  status.rs
src/sets/: gset.rs  mod.rs  orset.rs
src/traits/: bounded.rs  crdt.rs  mod.rs  platform.rs  realtime.rs  safety.rs
tests/: README.md  lib.rs  test_all_property_tests.rs  test_atomic.rs  test_gcounter.rs  test_gset.rs  test_lww_register.rs  test_lwwmap.rs  test_mvregister.rs  test_orset.rs  test_pncounter.rs
